Fix perm prompt z-index

--- a/app/stylesheets/shell-window/promptbar.less
+++ b/app/stylesheets/shell-window/promptbar.less
@@ -1,6 +1,6 @@
 #promptbars {
   position: fixed;
-  z-index: 1;
+  z-index: 20;
   top: 75px;
   left: 0;
   width: 100%;
